<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginTitle"
        android:id="@+id/lblTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36dp"
        android:textColor="#2f4f4f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblName"
        android:id="@+id/lblMail"
        android:layout_below="@+id/lblTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textColor="#555555"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/lblMail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/lblMailHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPassword"
        android:id="@+id/lblPassword"
        android:layout_marginTop="50dp"
        android:textColor="#555555"
        android:textSize="20dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/lblPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText"
        android:hint="@string/lblPasswordHint" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:minWidth="100dp"
        android:onClick="ndf_enter" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:minWidth="100dp" />

</RelativeLayout>
